--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -98,6 +98,7 @@ desugar-jdk = "2.0.4"
 androidMaterial = "1.11.0"
 
 firebaseBom = "32.7.2"
+firebaseCrashlyticsGradlePlugin = "2.9.9"
 
 google-firebase-appdistribution-gradle = "4.1.0"
 google-firebase-crashlytics-gradle = "2.9.9"
@@ -271,6 +272,7 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsGradlePlugin" }
 
 #buildLogic-kotlin-library = { id = "androidtemplate.kotlin.library", version = "+" }
 android-lint = { id = "com.android.lint", version.ref = "androidGradlePlugin" }
